# ftpclient

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: defs.h  ftp.h  repl.c  repl.h  sockets.c  sockets.h
src/cmds/: client_cmds.c  client_cmds.h  ftp_cmds.c  ftp_cmds.h
src/network/: server.c  server.h  sockets.c  sockets.h
